src/tmspec/tmspecParser.py
# Generated from tmspec.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class tmspecParser ( Parser ):

    grammarFileName = "tmspec.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'component'", "':'", "';'", "','", "'='", 
                     "'type'", "'zone'", "'version'", "'include'", "'flow'", 
                     "'('", "')'", "'true'", "'false'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'-->'", "'<--'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NUMBER", "ID", 
                      "VERSION", "QSTRING", "RARROW", "LARROW", "WS", "LINE_COMMENT", 
                      "COMMENT" ]

    RULE_start = 0
    RULE_declaration = 1
    RULE_component = 2
    RULE_name_and_type = 3
    RULE_attributes = 4
    RULE_attribute = 5
    RULE_typedef = 6
    RULE_zone = 7
    RULE_versiondef = 8
    RULE_include = 9
    RULE_flow = 10
    RULE_arrow = 11
    RULE_typing = 12
    RULE_value = 13
    RULE_boolean = 14
    RULE_number = 15
    RULE_identifier = 16

    ruleNames =  [ "start", "declaration", "component", "name_and_type", 
                   "attributes", "attribute", "typedef", "zone", "versiondef", 
                   "include", "flow", "arrow", "typing", "value", "boolean", 
                   "number", "identifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    NUMBER=15
    ID=16
    VERSION=17
    QSTRING=18
    RARROW=19
    LARROW=20
    WS=21
    LINE_COMMENT=22
    COMMENT=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def versiondef(self):
            return self.getTypedRuleContext(tmspecParser.VersiondefContext,0)


        def EOF(self):
            return self.getToken(tmspecParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tmspecParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(tmspecParser.DeclarationContext,i)


        def getRuleIndex(self):
            return tmspecParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = tmspecParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.versiondef()
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tmspecParser.T__0) | (1 << tmspecParser.T__5) | (1 << tmspecParser.T__6) | (1 << tmspecParser.T__8) | (1 << tmspecParser.T__9))) != 0):
                self.state = 35
                self.declaration()
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 41
            self.match(tmspecParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def component(self):
            return self.getTypedRuleContext(tmspecParser.ComponentContext,0)


        def flow(self):
            return self.getTypedRuleContext(tmspecParser.FlowContext,0)


        def zone(self):
            return self.getTypedRuleContext(tmspecParser.ZoneContext,0)


        def typedef(self):
            return self.getTypedRuleContext(tmspecParser.TypedefContext,0)


        def include(self):
            return self.getTypedRuleContext(tmspecParser.IncludeContext,0)


        def getRuleIndex(self):
            return tmspecParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = tmspecParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [tmspecParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.component()
                pass
            elif token in [tmspecParser.T__9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.flow()
                pass
            elif token in [tmspecParser.T__6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 45
                self.zone()
                pass
            elif token in [tmspecParser.T__5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 46
                self.typedef()
                pass
            elif token in [tmspecParser.T__8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 47
                self.include()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name_and_type(self):
            return self.getTypedRuleContext(tmspecParser.Name_and_typeContext,0)


        def attributes(self):
            return self.getTypedRuleContext(tmspecParser.AttributesContext,0)


        def getRuleIndex(self):
            return tmspecParser.RULE_component

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponent" ):
                listener.enterComponent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponent" ):
                listener.exitComponent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponent" ):
                return visitor.visitComponent(self)
            else:
                return visitor.visitChildren(self)




    def component(self):

        localctx = tmspecParser.ComponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_component)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(tmspecParser.T__0)
            self.state = 51
            self.name_and_type()
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==tmspecParser.T__1:
                self.state = 52
                self.match(tmspecParser.T__1)
                self.state = 53
                self.attributes()


            self.state = 56
            self.match(tmspecParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Name_and_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(tmspecParser.IdentifierContext,0)


        def typing(self):
            return self.getTypedRuleContext(tmspecParser.TypingContext,0)


        def getRuleIndex(self):
            return tmspecParser.RULE_name_and_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName_and_type" ):
                listener.enterName_and_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName_and_type" ):
                listener.exitName_and_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName_and_type" ):
                return visitor.visitName_and_type(self)
            else:
                return visitor.visitChildren(self)




    def name_and_type(self):

        localctx = tmspecParser.Name_and_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_name_and_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.identifier()
            self.state = 59
            self.typing()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tmspecParser.AttributeContext)
            else:
                return self.getTypedRuleContext(tmspecParser.AttributeContext,i)


        def getRuleIndex(self):
            return tmspecParser.RULE_attributes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributes" ):
                listener.enterAttributes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributes" ):
                listener.exitAttributes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributes" ):
                return visitor.visitAttributes(self)
            else:
                return visitor.visitChildren(self)




    def attributes(self):

        localctx = tmspecParser.AttributesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attributes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.attribute()
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==tmspecParser.T__3:
                self.state = 62
                self.match(tmspecParser.T__3)
                self.state = 63
                self.attribute()
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(tmspecParser.IdentifierContext,0)


        def QSTRING(self):
            return self.getToken(tmspecParser.QSTRING, 0)

        def value(self):
            return self.getTypedRuleContext(tmspecParser.ValueContext,0)


        def getRuleIndex(self):
            return tmspecParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = tmspecParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [tmspecParser.T__0, tmspecParser.T__5, tmspecParser.T__6, tmspecParser.T__7, tmspecParser.T__8, tmspecParser.T__9, tmspecParser.ID]:
                self.state = 69
                self.identifier()
                pass
            elif token in [tmspecParser.QSTRING]:
                self.state = 70
                self.match(tmspecParser.QSTRING)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==tmspecParser.T__4:
                self.state = 73
                self.match(tmspecParser.T__4)
                self.state = 74
                self.value()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name_and_type(self):
            return self.getTypedRuleContext(tmspecParser.Name_and_typeContext,0)


        def attributes(self):
            return self.getTypedRuleContext(tmspecParser.AttributesContext,0)


        def getRuleIndex(self):
            return tmspecParser.RULE_typedef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedef" ):
                listener.enterTypedef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedef" ):
                listener.exitTypedef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedef" ):
                return visitor.visitTypedef(self)
            else:
                return visitor.visitChildren(self)




    def typedef(self):

        localctx = tmspecParser.TypedefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typedef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(tmspecParser.T__5)
            self.state = 78
            self.name_and_type()
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==tmspecParser.T__1:
                self.state = 79
                self.match(tmspecParser.T__1)
                self.state = 80
                self.attributes()


            self.state = 83
            self.match(tmspecParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ZoneContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(tmspecParser.IdentifierContext,0)


        def attributes(self):
            return self.getTypedRuleContext(tmspecParser.AttributesContext,0)


        def getRuleIndex(self):
            return tmspecParser.RULE_zone

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterZone" ):
                listener.enterZone(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitZone" ):
                listener.exitZone(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitZone" ):
                return visitor.visitZone(self)
            else:
                return visitor.visitChildren(self)




    def zone(self):

        localctx = tmspecParser.ZoneContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_zone)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(tmspecParser.T__6)
            self.state = 86
            self.identifier()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==tmspecParser.T__1:
                self.state = 87
                self.match(tmspecParser.T__1)
                self.state = 88
                self.attributes()


            self.state = 91
            self.match(tmspecParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersiondefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERSION(self):
            return self.getToken(tmspecParser.VERSION, 0)

        def getRuleIndex(self):
            return tmspecParser.RULE_versiondef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersiondef" ):
                listener.enterVersiondef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersiondef" ):
                listener.exitVersiondef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVersiondef" ):
                return visitor.visitVersiondef(self)
            else:
                return visitor.visitChildren(self)




    def versiondef(self):

        localctx = tmspecParser.VersiondefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_versiondef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(tmspecParser.T__7)
            self.state = 94
            self.match(tmspecParser.VERSION)
            self.state = 95
            self.match(tmspecParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QSTRING(self):
            return self.getToken(tmspecParser.QSTRING, 0)

        def getRuleIndex(self):
            return tmspecParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = tmspecParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(tmspecParser.T__8)
            self.state = 98
            self.match(tmspecParser.QSTRING)
            self.state = 99
            self.match(tmspecParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FlowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tmspecParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(tmspecParser.IdentifierContext,i)


        def arrow(self):
            return self.getTypedRuleContext(tmspecParser.ArrowContext,0)


        def typing(self):
            return self.getTypedRuleContext(tmspecParser.TypingContext,0)


        def attributes(self):
            return self.getTypedRuleContext(tmspecParser.AttributesContext,0)


        def getRuleIndex(self):
            return tmspecParser.RULE_flow

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlow" ):
                listener.enterFlow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFlow" ):
                listener.exitFlow(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFlow" ):
                return visitor.visitFlow(self)
            else:
                return visitor.visitChildren(self)




    def flow(self):

        localctx = tmspecParser.FlowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_flow)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(tmspecParser.T__9)
            self.state = 102
            self.identifier()
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==tmspecParser.T__10:
                self.state = 103
                self.typing()


            self.state = 106
            self.match(tmspecParser.T__1)
            self.state = 107
            self.identifier()
            self.state = 108
            self.arrow()
            self.state = 109
            self.identifier()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==tmspecParser.T__3:
                self.state = 110
                self.match(tmspecParser.T__3)
                self.state = 111
                self.attributes()


            self.state = 114
            self.match(tmspecParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RARROW(self):
            return self.getToken(tmspecParser.RARROW, 0)

        def LARROW(self):
            return self.getToken(tmspecParser.LARROW, 0)

        def getRuleIndex(self):
            return tmspecParser.RULE_arrow

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrow" ):
                listener.enterArrow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrow" ):
                listener.exitArrow(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrow" ):
                return visitor.visitArrow(self)
            else:
                return visitor.visitChildren(self)




    def arrow(self):

        localctx = tmspecParser.ArrowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arrow)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not(_la==tmspecParser.RARROW or _la==tmspecParser.LARROW):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tmspecParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(tmspecParser.IdentifierContext,i)


        def getRuleIndex(self):
            return tmspecParser.RULE_typing

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTyping" ):
                listener.enterTyping(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTyping" ):
                listener.exitTyping(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTyping" ):
                return visitor.visitTyping(self)
            else:
                return visitor.visitChildren(self)




    def typing(self):

        localctx = tmspecParser.TypingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_typing)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(tmspecParser.T__10)
            self.state = 119
            self.identifier()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==tmspecParser.T__3:
                self.state = 120
                self.match(tmspecParser.T__3)
                self.state = 121
                self.identifier()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(tmspecParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolean(self):
            return self.getTypedRuleContext(tmspecParser.BooleanContext,0)


        def number(self):
            return self.getTypedRuleContext(tmspecParser.NumberContext,0)


        def identifier(self):
            return self.getTypedRuleContext(tmspecParser.IdentifierContext,0)


        def QSTRING(self):
            return self.getToken(tmspecParser.QSTRING, 0)

        def getRuleIndex(self):
            return tmspecParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = tmspecParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_value)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [tmspecParser.T__12, tmspecParser.T__13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.boolean()
                pass
            elif token in [tmspecParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.number()
                pass
            elif token in [tmspecParser.T__0, tmspecParser.T__5, tmspecParser.T__6, tmspecParser.T__7, tmspecParser.T__8, tmspecParser.T__9, tmspecParser.ID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 131
                self.identifier()
                pass
            elif token in [tmspecParser.QSTRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 132
                self.match(tmspecParser.QSTRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tmspecParser.RULE_boolean

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolean" ):
                listener.enterBoolean(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolean" ):
                listener.exitBoolean(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolean" ):
                return visitor.visitBoolean(self)
            else:
                return visitor.visitChildren(self)




    def boolean(self):

        localctx = tmspecParser.BooleanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_boolean)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            _la = self._input.LA(1)
            if not(_la==tmspecParser.T__12 or _la==tmspecParser.T__13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(tmspecParser.NUMBER, 0)

        def getRuleIndex(self):
            return tmspecParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)




    def number(self):

        localctx = tmspecParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_number)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(tmspecParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(tmspecParser.ID, 0)

        def getRuleIndex(self):
            return tmspecParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = tmspecParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_identifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tmspecParser.T__0) | (1 << tmspecParser.T__5) | (1 << tmspecParser.T__6) | (1 << tmspecParser.T__7) | (1 << tmspecParser.T__8) | (1 << tmspecParser.T__9) | (1 << tmspecParser.ID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





